Fixed overlap of crosssell products with title when --listing-grid-item-margin is used

--- a/web/css/pages/_cart.less
+++ b/web/css/pages/_cart.less
@@ -11,6 +11,10 @@
                         padding: @4;
                     }
                 }
+                .products-grid {
+                    // margin-top: ~"abs(2 * var(--listing-grid-item-margin))";
+                    margin-top: ~"max(2 * var(--listing-grid-item-margin), -2 * var(--listing-grid-item-margin))";
+                }
             }
         }
     }
